@@ -1,3 +1,7 @@
+Wed Oct  7 14:05:35 UTC 2009 / Arjen de Korte <arjen@de-korte.org>
+
+ - drivers/snmp-ups.c: remove suspicious code for shutdown.* commands
+
 Wed Oct  7 13:43:15 UTC 2009 / Arjen de Korte <arjen@de-korte.org>
 
  - drivers/apc-hid.c: add support for Back-UPS RS series test.battery.*
